# typedb-dependencies

./: .bazelrc  .gitignore  BAZEL8-UPGRADE-PLAN.md  BUILD  BZLMOD_MIGRATION_GUIDE.md  BZLMOD_MIGRATION_STATUS.md  MODULE.bazel  WORKSPACE
.factory/: automation.yml  validate_all_maven_includes.patch
builder/: maven_dependencies.MODULE.bazel
builder/antlr/: BUILD
builder/aspect/: deps.bzl
builder/compose/: BUILD
builder/java/: deps.bzl  rules.bzl
builder/nodejs/: defs.bzl  deps.bzl
builder/proto_grpc/: deps.bzl
builder/proto_grpc/rust/: compile.bzl  compile.rs
builder/python/: deps.bzl
builder/rust/: deps.bzl  rules.bzl  versions.bzl
builder/rust/cargo/: BUILD  ManifestWriter.kt  project_aspect.bzl
builder/swig/: csharp.bzl  go.bzl  java.bzl  python.bzl
common/: maven_dependencies.MODULE.bazel
common/java/: BUILD
common/java/yaml/: YAML.java
distribution/: deps.bzl
distribution/artifact/: rules.bzl
distribution/docker/: deps.bzl
factory/: maven_dependencies.MODULE.bazel
factory/analysis/: BUILD
images/docker/: BUILD  README.md  assemble-docker.sh  deploy-docker.sh
images/docker/amazonlinux2-3x-ci/: BUILD  Dockerfile.amd64  Dockerfile.arm64  README.md  assemble-deploy-all.sh  deployment.bzl
images/docker/ubuntu-2x/: BUILD  Dockerfile.amd64  Dockerfile.arm64  README.md  assemble-docker.sh
images/docker/ubuntu-3x/: BUILD  Dockerfile.amd64  Dockerfile.arm64  README.md  assemble-deploy-all.sh  assemble-docker.sh  deploy-docker.sh
patches/: BUILD  protobuf-build-bazel-include.patch  protobuf-build-include.patch  protobuf-build-protoc.patch  rules_rust.patch
tool/: maven_dependencies.MODULE.bazel  workspace_refs_stub.bzl
tool/checkstyle/: deps.bzl  rules.bzl  test-coverage.py
tool/github/: BUILD  OpenPR.kt
tool/ide/: BUILD  RustManifestSyncer.kt
tool/ide/test/: BUILD  MODULE.bazel
tool/ide/test/lib1/: BUILD
tool/ide/test/lib2/: BUILD
tool/jmh/: rules.bzl
tool/release/: BUILD  Docs.kt
tool/release/notes/: BUILD  Commit.kt  NotesCreate.kt  NotesValidate.kt
tool/release/version/: BUILD
tool/swig/: swig.BUILD
tool/unuseddeps/: unused-deps.py
